# manga-bible

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: development-journal.md
docs/architecture/: software-design-document.md
docs/coding-standards/: python-style.md
docs/decisions/: ADR-0001-src-layout.md  ADR-0002-project-centric-architecture.md  ADR-0004-project-persistence.md  feature-create-project.md
src/mangabible/: __init__.py  __main__.py
src/mangabible/app/: application.py  bootstrap.py  constants.py  logging_config.py  paths.py
src/mangabible/models/: project.py
src/mangabible/repositories/: project_repository.py
src/mangabible/ui/windows/: base_window.py  project_hub_window.py
tests/: test_project_model.py  test_project_repository.py
