[project]
name = "manga-bible"
version = "0.1.0"
description = "A structured desktop environment to organize assets, automate tasks, and track manga creation workflows."
authors = [
    { name = "Sastha Ruban", email = "sastharuban24@gmail.com" }
]
dependencies = [
    "PySide6>=6.5.0",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/Gappyjosuke/manga-bible"
Repository = "https://github.com/Gappyjosuke/manga-bible"
Issues = "https://github.com/Gappyjosuke/manga-bible/issues"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"